# utils

./: LICENSE  README.md  pyproject.toml
src/: driver.py  pkg-sitecustomize.py
src/snek/: __.py
src/snek/utils/: __.py  __init__.py  helpers.py  main.py
src/snek/utils/base/: __init__.py  singleton.py
src/snek/utils/data/: cache.py  cache_abc.py  cache_query.py  const.py  data_builder.py  hive_store.py  store.py
src/snek/utils/data/_old/: old.cache_shell.py
src/snek/utils/hash/: hash_utils.py
src/snek/utils/ix/: directive.py  types.py
src/snek/utils/shell/: app_shell.py  shell.py
src/snek/utils/smart/: __init__.py  enum.py  fbook.py  obj.py
src/snek/utils/term/: const.py  escape.py  logo.py  printer_abs.py  printkit.py  view.py
